ajuste cronograma e mudanca para pasta raiz

--- a/em-breve.html
+++ b/em-breve.html
@@ -20,7 +20,7 @@
         class="sticky top-0 shadow-md z-50 px-4 py-3 flex items-center justify-between h-14 bg-black border-b-[#198754] border-b">
         <!-- Logo -->
         <div class="h-full">
-            <a href="/2025/">
+            <a href="/">
                 <img class="h-full w-auto" src="src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             </a>
         </div>
@@ -34,43 +34,43 @@
         <div class="absolute w-full bg-black p-5 flex-col gap-5 top-0 left-0 hidden animate__animated animate__slideInDown text-white md:hidden"
             id="hamburger-menu">
             <div class="flex justify-between">
-                <a href="/2025/">
+                <a href="/">
                     <img class="h-[40px] w-auto" src="src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
                 </a>
                 <i class="bi bi-x-lg cursor-pointer" id="close-menu"></i>
             </div>
-            <a href="/2025/" class="hover:text-gray-400">Início</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/" class="hover:text-gray-400">Início</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
 
         <!-- Menu MD/LG -->
         <div class="hidden text-white space-x-8 md:items-center md:flex">
-            <a href="/2025/" class="hover:text-gray-400">Início</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/" class="hover:text-gray-400">Início</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
             <div class="relative group">
                 <span class="hover:text-gray-400">Iniciativas BGBH</span>
                 <div
                     class="w-36 absolute left-0 hidden mt-0 space-y-2 bg-white shadow-md group-hover:block hover:block">
-                    <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Joga no QG
                     </a>
-                    <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Resenha com Jogatina
                     </a>
                 </div>
             </div>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
     </nav>
     <div class="w-full h-[calc(100vh-56px)] items-center justify-center bg-slate-800  flex flex-col gap-10">
         <div class="h-24">
-            <a href="/2025/">
+            <a href="/">
                 <img class="h-full w-auto" src="src/img/logo/bgbh-com-sombra.png" alt="Logo BGBH">
             </a>
         </div>
