--- a/mathtrade-bh/edicao-novatos.html
+++ b/mathtrade-bh/edicao-novatos.html
@@ -22,7 +22,7 @@
   <meta property="og:url" content="https://bgbh.com.br/mathtradebh.html" />
   <meta property="og:description" content="MATH TRADE BELO HORIZONTE - Edição Novatos" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://bgbh.com.br/2025/img/math-trade/615x330-MT9.5.png" />
+  <meta property="og:image" content="https://bgbh.com.br/img/math-trade/615x330-MT9.5.png" />
 </head>
 
 <body class="mathtrade-page bg-white">
@@ -98,11 +98,11 @@
       <div class="border border-red-500 px-3 py-2 font-bold mt-2">
         <span class="text-red-700">IMPORTANTE!</span>
         Se for a sua primeira Math Trade, é imprescindível ler, se ainda não o fez, as nossas páginas explicativas:
-        <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/2025/mathtrade-bh/o-que-e.html">
+        <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/mathtrade-bh/o-que-e.html">
           O que é uma
           Math Trade
         </a> e
-        <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/2025/mathtrade-bh/regras-gerais.html">
+        <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/mathtrade-bh/regras-gerais.html">
           Regras Gerais de uma Math Trade
         </a>
       </div>
@@ -226,7 +226,7 @@
           <h4 class="font-bold">PRIMEIRA ETAPA: Adicionando seus jogos na lista de trocas</h4>
           <small>
             (ainda tem dúvidas sobre como funciona a primeira etapa? Então
-            <a href="/2025/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
+            <a href="/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
               class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
           </small>
           <p class="mt-1">
@@ -239,7 +239,7 @@
           <h4 class="font-bold">SEGUNDA ETAPA: Definição e envio da lista de desejos (wantlist)</h4>
           <small>
             (ainda tem dúvidas sobre como funciona a segunda etapa? Então
-            <a href="/2025/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
+            <a href="/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
               class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
           </small>
           <p class="mt-1">
