--- a/mathtrade-bh/edicao-setembro-2025.html
+++ b/mathtrade-bh/edicao-setembro-2025.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BoardgameBH [BGBH]</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="canonical" href="https://bgbh.com.br/2025/mathtradebh/edicao-setembro-2025.html">
+    <link rel="canonical" href="https://bgbh.com.br/mathtradebh/edicao-setembro-2025.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://bgbh.com.br/mathtradebh.html" />
     <meta property="og:description" content="MATH TRADE BELO HORIZONTE - 10ª Edição - Setembro 2025" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://bgbh.com.br/2025/img/math-trade/615x330-MT9.5.png" />
+    <meta property="og:image" content="https://bgbh.com.br/img/math-trade/615x330-MT9.5.png" />
 </head>
 
 <body class="mathtrade-page bg-white">
@@ -101,12 +101,11 @@
                 <span class="text-red-700">IMPORTANTE!</span>
                 Se for a sua primeira Math Trade, é imprescindível ler, se ainda não o fez, as nossas páginas
                 explicativas:
-                <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/2025/mathtrade-bh/o-que-e.html">
+                <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/mathtrade-bh/o-que-e.html">
                     O que é uma
                     Math Trade
                 </a> e
-                <a class="text-blue-700 hover:text-blue-900" target="_blank"
-                    href="/2025/mathtrade-bh/regras-gerais.html">
+                <a class="text-blue-700 hover:text-blue-900" target="_blank" href="/mathtrade-bh/regras-gerais.html">
                     Regras Gerais de uma Math Trade
                 </a>
             </div>
@@ -236,13 +235,12 @@
                     <h4 class="font-bold">PRIMEIRA ETAPA: Adicionando seus jogos na lista de trocas</h4>
                     <small>
                         (ainda tem dúvidas sobre como funciona a primeira etapa? Então
-                        <a href="/2025/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
+                        <a href="/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
                             class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
                     </small>
                     <p class="mt-1">
-                        Em breve
-						<!-- 17/09/2025 (Quarta-Feira) 0h até <br />
-                        22/09/2025 (Segunda-Feira) 22h -->
+                        24/09/2025 (Quarta-Feira) 0h até <br />
+                        29/09/2025 (Segunda-Feira) 22h
                     </p>
                 </div>
                 <hr class="my-4 w-3/4 mx-auto">
@@ -250,13 +248,12 @@
                     <h4 class="font-bold">SEGUNDA ETAPA: Definição e envio da lista de desejos (wantlist)</h4>
                     <small>
                         (ainda tem dúvidas sobre como funciona a segunda etapa? Então
-                        <a href="/2025/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
+                        <a href="/mathtrade-bh/o-que-e#detalhes_etapas" target="_blank"
                             class="text-yellow-400 hover:text-yellow-500">clique aqui</a>.)
                     </small>
                     <p class="mt-1">
-                        Em breve
-						<!-- 22/09/2025 (Segunda-Feira) 22h até <br />
-                        25/09/2025 (Quinta-Feira) 22h -->
+                        29/09/2025 (Segunda-Feira) 22h até <br />
+                        02/10/2025 (Quinta-Feira) 22h
                     </p>
                 </div>
                 <hr class="my-4 w-3/4 mx-auto">
@@ -265,16 +262,14 @@
                         TERCEIRA ETAPA: Resultado Oficial após execução do algoritmo
                     </h4>
                     <p class="mt-1">
-						Em breve
-						<!-- 26/09/2025 (Sexta-Feira) até 07h -->
-					</p>
+                        03/10/2025 (Sexta-Feira) até 07h
+                    </p>
                 </div>
                 <hr class="my-4 w-3/4 mx-auto">
                 <div class="quarta-etapa">
                     <h4 class="font-bold">QUARTA ETAPA: Entrega dos jogos</h4>
                     <p class="mt-1">
-                        Em breve
-						<!-- Entre 26/09/2025 (Sexta-Feira) e 27/09/2025 (Sábado) até 17h -->
+                        Entre 03/10/2025 (Sexta-Feira) e 04/10/2025 (Sábado) até 17h
                     </p>
                     <p class="mt-2">
                         Confira abaixo as informações sobre as entregas desta edição.
