--- a/mathtrade-bh/regras-gerais.html
+++ b/mathtrade-bh/regras-gerais.html
@@ -296,7 +296,7 @@
                 <h2 class="text-green-900 font-extrabold text-2xl text-center">
                     ACESSE O NOSSO FAQ PARA TIRAR MAIS DÚVIDAS SOBRE MATH TRADES
                 </h2>
-                <a href="/2025/mathtrade-bh/faq" class="text-center w-auto mt-2 px-6 py-4 bg-green-700 text-white">
+                <a href="/mathtrade-bh/faq" class="text-center w-auto mt-2 px-6 py-4 bg-green-700 text-white">
                     IR PARA PÁGINA DE DÚVIDAS
                 </a>
             </div>
@@ -306,7 +306,7 @@
                     <br>
                     FIQUE POR DENTRO DE TUDO CLICANDO NA IMAGEM ABAIXO.
                 </h2>
-                <a href="/2025/mathtrade-bh/edicao-setembro-2025" class="text-center w-auto mt-2">
+                <a href="/mathtrade-bh/edicao-setembro-2025" class="text-center w-auto mt-2">
                     <img src="/src/img/mathtrade/615x330-MT10.png" alt="Regras Math Trade Décima Edição" />
                 </a>
             </div>
