--- a/bgbh-masters/index.html
+++ b/bgbh-masters/index.html
@@ -40,35 +40,35 @@
                 <i class="bi bi-x-lg cursor-pointer" id="close-menu"></i>
             </div>
             <a href="/" class="hover:text-gray-400">Início</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Iniciativas BGBH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
 
         <!-- Menu MD/LG -->
         <div class="hidden text-white space-x-8 md:items-center md:flex">
             <a href="/" class="hover:text-gray-400">Início</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Sobre</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Sobre</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Math Trade BH</a>
             <div class="relative group">
                 <span class="hover:text-gray-400">Iniciativas BGBH</span>
                 <div
                     class="w-36 absolute left-0 hidden mt-0 space-y-2 bg-white shadow-md group-hover:block hover:block">
-                    <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">Joga
                         no
                         QG!</a>
-                    <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Resenha com Jogatina
                     </a>
-                    <a href="/2025/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
+                    <a href="/em-breve.html" class="text-sm block px-4 py-2 text-gray-800 hover:bg-gray-200">
                         Outras iniciativas
                     </a>
                 </div>
             </div>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Eventos</a>
-            <a href="/2025/em-breve.html" class="hover:text-gray-400">Contato</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Eventos</a>
+            <a href="/em-breve.html" class="hover:text-gray-400">Contato</a>
         </div>
     </nav>
     <header class="header-home h-[calc(90vh-56px)] relative flex flex-col items-center justify-evenly">
