--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 	<link rel="stylesheet" href="/src/styles/main.scss">
 </head>
 
-<body class="min-h-screen bg-gray-50 font-sans" data-aos-easing="ease" data-aos-duration="400"
-	data-aos-delay="0">
+<body class="min-h-screen bg-gray-50 font-sans" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WB466ZC" height="0" width="0"
 			style="display: none; visibility: hidden"></iframe></noscript>
@@ -116,118 +115,123 @@
 
 		<!-- MAIN CONTENT -->
 		<main class="flex-1">
-		<!-- TOPO -->
-		<div id="topoSite" class="relative w-full h-screen md:h-[80vh] overflow-hidden">
-			<div class="absolute inset-0">
-				<img src="/src/img/geral/bgbh-topo-site.jpg" class="w-full h-full object-cover" alt="BGBH">
-				<div class="absolute inset-0 bg-black bg-opacity-30"></div>
-			</div>
-			<div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
-				<img class="w-48 md:w-60 lg:w-72 h-auto mx-auto mb-8 md:mb-12" src="/src/img/logo/bgbh-logo.png" alt="logo BGBH">
-				<p class="text-lg md:text-xl lg:text-2xl font-light">O seu portal de jogos de tabuleiro</p>
-			</div>
-		</div>
-
-		<!-- CHAMADA INICIAL -->
-		<div class="container mx-auto px-4 py-8 md:py-6">
-			<div class="flex flex-col items-center text-center max-w-4xl mx-auto">
-				<h1 class="text-3xl md:text-4xl font-bold mb-6 text-gray-800">
-					NOSSO PORTAL ESTÁ EM REFORMULAÇÃO
-				</h1>
-				<h3 class="text-lg md:text-xl font-normal px-4 text-gray-600 leading-relaxed">
-					Mas você continua podendo acompanhar nossas iniciativas, dentre elas,
-					<span class="font-bold text-gray-800">MATH TRADE BH</span>,
-					<br class="hidden sm:block">
-					e outras <span class="font-bold text-gray-800">novidades e eventos</span> que
-					organizamos e apoiamos.
-				</h3>
-			</div>
-		</div>
-
-		<div class="border-t-4 border-gray-300 mx-auto max-w-4xl"></div>
-		<div class="border-t-4 border-gray-300 mx-auto max-w-4xl mt-1"></div>
-
-		<!-- MATH TRADE SECTION -->
-		<div class="container mx-auto px-4 py-10">
-			<div id="math_trade" class="anchor-spacer -mt-20 pt-20"></div>
-			<div data-aos-duration="10000" data-aos="fade-down-right" class="aos-init mb-8">
-				<div class="flex items-center mb-4">
-					<i class="text-blue-600 text-4xl mr-3">↔</i>
-					<h1 class="text-2xl md:text-3xl lg:text-3xl font-bold text-gray-800">
-						MATH TRADE BELO HORIZONTE - SETEMBRO 2025
-					</h1>
+			<!-- TOPO -->
+			<div id="topoSite" class="relative w-full h-screen md:h-[80vh] overflow-hidden">
+				<div class="absolute inset-0">
+					<img src="/src/img/geral/bgbh-topo-site.jpg" class="w-full h-full object-cover" alt="BGBH">
+					<div class="absolute inset-0 bg-black bg-opacity-30"></div>
 				</div>
-				<p class="text-lg text-gray-700 leading-relaxed">
-					<b>A 10ª edição da nossa MathTrade vem aí para você renovar sua coleção!</b>
-					<br>
-					Clique nas imagens abaixo para conhecer o que é, para ver as regras
-					gerais ou para saber os detalhes específicos dessa edição.
-				</p>
+				<div class="absolute inset-0 flex flex-col items-center justify-center text-center text-white px-4">
+					<img class="w-48 md:w-60 lg:w-72 h-auto mx-auto mb-8 md:mb-12" src="/src/img/logo/bgbh-logo.png"
+						alt="logo BGBH">
+					<p class="text-lg md:text-xl lg:text-2xl font-light">O seu portal de jogos de tabuleiro</p>
+				</div>
 			</div>
-			<div class="aos-init" data-aos-duration="15000" data-aos="fade-right" data-aos-delay="500">
-				<div class="bg-white rounded-lg shadow-lg overflow-hidden">
-					<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 p-6">
-						<a href="/2025/mathtrade-bh/o-que-e.html" target="_self"
-							onclick="ga('send', 'event', 'O que é MT', 'click-imagem');"
-							class="block transform hover:scale-105 transition-transform duration-300">
-							<img src="/src/img/mathtrade/o-que-e-uma-math-trade.jpeg"
-								class="w-full h-auto rounded-lg shadow-md" alt="Math Trade Belo Horizonte">
-						</a>
-						<a href="/2025/mathtrade-bh/regras-gerais.html" target="_self"
-							onclick="ga('send', 'event', 'Regras Gerais MT', 'click-imagem');"
-							class="block transform hover:scale-105 transition-transform duration-300">
-							<img src="/src/img/mathtrade/regras-gerais-math-trade.jpeg"
-								class="w-full h-auto rounded-lg shadow-md" alt="Math Trade Belo Horizonte">
-						</a>
-						<a href="/2025/mathtrade-bh/edicao-setembro-2025.html" target="_self"
-							onclick="ga('send', 'event', 'Regras Edição atual', 'click-imagem');"
-							class="block transform hover:scale-105 transition-transform duration-300">
-							<img src="/src/img/mathtrade/615x330-MT10.png" class="w-full h-auto rounded-lg shadow-md"
-								alt="Math Trade Belo Horizonte">
-						</a>
+
+			<!-- CHAMADA INICIAL -->
+			<div class="container mx-auto px-4 py-8 md:py-6">
+				<div class="flex flex-col items-center text-center max-w-4xl mx-auto">
+					<h1 class="text-3xl md:text-4xl font-bold mb-6 text-gray-800">
+						NOSSO PORTAL ESTÁ EM REFORMULAÇÃO
+					</h1>
+					<h3 class="text-lg md:text-xl font-normal px-4 text-gray-600 leading-relaxed">
+						Mas você continua podendo acompanhar nossas iniciativas, dentre elas,
+						<span class="font-bold text-gray-800">MATH TRADE BH</span>,
+						<br class="hidden sm:block">
+						e outras <span class="font-bold text-gray-800">novidades e eventos</span> que
+						organizamos e apoiamos.
+					</h3>
+				</div>
+			</div>
+
+			<div class="border-t-4 border-gray-300 mx-auto max-w-4xl"></div>
+			<div class="border-t-4 border-gray-300 mx-auto max-w-4xl mt-1"></div>
+
+			<!-- MATH TRADE SECTION -->
+			<div class="container mx-auto px-4 py-10">
+				<div id="math_trade" class="anchor-spacer -mt-20 pt-20"></div>
+				<div data-aos-duration="10000" data-aos="fade-down-right" class="aos-init mb-8">
+					<div class="flex items-center mb-4">
+						<i class="text-blue-600 text-4xl mr-3">↔</i>
+						<h1 class="text-2xl md:text-3xl lg:text-3xl font-bold text-gray-800">
+							MATH TRADE BELO HORIZONTE - SETEMBRO 2025
+						</h1>
+					</div>
+					<p class="text-lg text-gray-700 leading-relaxed">
+						<b>A 10ª edição da nossa MathTrade vem aí para você renovar sua coleção!</b>
+						<br>
+						Clique nas imagens abaixo para conhecer o que é, para ver as regras
+						gerais ou para saber os detalhes específicos dessa edição.
+					</p>
+				</div>
+				<div class="aos-init" data-aos-duration="15000" data-aos="fade-right" data-aos-delay="500">
+					<div class="bg-white rounded-lg shadow-lg overflow-hidden">
+						<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 p-6">
+							<a href="/mathtrade-bh/o-que-e.html" target="_self"
+								onclick="ga('send', 'event', 'O que é MT', 'click-imagem');"
+								class="block transform hover:scale-105 transition-transform duration-300">
+								<img src="/src/img/mathtrade/o-que-e-uma-math-trade.jpeg"
+									class="w-full h-auto rounded-lg shadow-md" alt="Math Trade Belo Horizonte">
+							</a>
+							<a href="/mathtrade-bh/regras-gerais.html" target="_self"
+								onclick="ga('send', 'event', 'Regras Gerais MT', 'click-imagem');"
+								class="block transform hover:scale-105 transition-transform duration-300">
+								<img src="/src/img/mathtrade/regras-gerais-math-trade.jpeg"
+									class="w-full h-auto rounded-lg shadow-md" alt="Math Trade Belo Horizonte">
+							</a>
+							<a href="/mathtrade-bh/edicao-setembro-2025.html" target="_self"
+								onclick="ga('send', 'event', 'Regras Edição atual', 'click-imagem');"
+								class="block transform hover:scale-105 transition-transform duration-300">
+								<img src="/src/img/mathtrade/615x330-MT10.png"
+									class="w-full h-auto rounded-lg shadow-md" alt="Math Trade Belo Horizonte">
+							</a>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="border-t-4 border-gray-300 mx-auto max-w-4xl my-12"></div>
-			
-			<div data-aos-duration="10000" data-aos="fade-down-right" class="aos-init mb-8">
-				<div class="flex items-center mb-4">
-					<i class="text-yellow-600 text-4xl mr-3">🏆</i>
-					<h1 class="text-2xl md:text-3xl lg:text-3xl font-bold text-gray-800">INICIATIVAS E EVENTOS</h1>
+				<div class="border-t-4 border-gray-300 mx-auto max-w-4xl my-12"></div>
+
+				<div data-aos-duration="10000" data-aos="fade-down-right" class="aos-init mb-8">
+					<div class="flex items-center mb-4">
+						<i class="text-yellow-600 text-4xl mr-3">🏆</i>
+						<h1 class="text-2xl md:text-3xl lg:text-3xl font-bold text-gray-800">INICIATIVAS E EVENTOS</h1>
+					</div>
+					<p class="text-lg text-gray-700 leading-relaxed">
+						Além da Math Trade, o BoardgameBH também promove outras iniciativas e apoia eventos de jogos de
+						tabuleiro, tanto online quanto presenciais. Fique de olho em nossas redes sociais para não
+						perder
+						nenhuma novidade.
+					</p>
 				</div>
-				<p class="text-lg text-gray-700 leading-relaxed">
-					Além da Math Trade, o BoardgameBH também promove outras iniciativas e apoia eventos de jogos de
-					tabuleiro, tanto online quanto presenciais. Fique de olho em nossas redes sociais para não perder
-					nenhuma novidade.
-				</p>
-			</div>
 
-			
-			<!-- INICIATIVAS E EVENTOS -->
-			<div>
-				<a class="block w-[300px] h-auto mx-auto mb-4" href="https://www.instagram.com/p/DOYg4BuAP1T/?img_index=1" target="_blank" class="text-blue-600 underline"
-					onclick="ga('send', 'event', 'Nerd Experience', 'click-img');">
-					<img src="/src/img/geral/nxp-2025.png" alt="Nerd Experience 2025">
-				</a>
-				Em Setembro temos muita coisa acontecendo! Além da nossa Math Trade, participe também do
-				<a href="https://www.instagram.com/p/DOYg4BuAP1T/?img_index=1" target="_blank" class="text-blue-600 underline"
-					onclick="ga('send', 'event', 'Nerd Experience', 'click-link');">Nerd Experience 2025</a>, um evento
-				incrível para os amantes de cultura pop, jogos e muito mais. Estaremos lá com um stand cheio de
-				jogos e atividades para você se divertir. Não perca essa oportunidade de conhecer novas pessoas e
-				aproveitar tudo o que o mundo geek tem a oferecer!
-			</div>
 
-			<div class="border-t-4 border-gray-300 mx-auto max-w-4xl my-12"></div>
+				<!-- INICIATIVAS E EVENTOS -->
+				<div>
+					<a class="block w-[300px] h-auto mx-auto mb-4"
+						href="https://www.instagram.com/p/DOYg4BuAP1T/?img_index=1" target="_blank"
+						class="text-blue-600 underline" onclick="ga('send', 'event', 'Nerd Experience', 'click-img');">
+						<img src="/src/img/geral/nxp-2025.png" alt="Nerd Experience 2025">
+					</a>
+					Em Setembro temos muita coisa acontecendo! Além da nossa Math Trade, participe também do
+					<a href="https://www.instagram.com/p/DOYg4BuAP1T/?img_index=1" target="_blank"
+						class="text-blue-600 underline"
+						onclick="ga('send', 'event', 'Nerd Experience', 'click-link');">Nerd Experience 2025</a>, um
+					evento
+					incrível para os amantes de cultura pop, jogos e muito mais. Estaremos lá com um stand cheio de
+					jogos e atividades para você se divertir. Não perca essa oportunidade de conhecer novas pessoas e
+					aproveitar tudo o que o mundo geek tem a oferecer!
+				</div>
 
-			<!-- BANNER CENTRAL -->
-			<div class="bg-gradient-to-r from-green-600 to-blue-600 text-white py-8 px-4 rounded-lg text-center">
-				<span class="text-xl md:text-2xl font-extrabold">
-					ENTRE EM CONTATO CONOSCO E SEJA UM APOIADOR OU PARCEIRO DO NOSSO
-					PROJETO
-				</span>
+				<div class="border-t-4 border-gray-300 mx-auto max-w-4xl my-12"></div>
+
+				<!-- BANNER CENTRAL -->
+				<div class="bg-gradient-to-r from-green-600 to-blue-600 text-white py-8 px-4 rounded-lg text-center">
+					<span class="text-xl md:text-2xl font-extrabold">
+						ENTRE EM CONTATO CONOSCO E SEJA UM APOIADOR OU PARCEIRO DO NOSSO
+						PROJETO
+					</span>
+				</div>
 			</div>
-		</div>
 		</main>
 
 		<!-- RODAPÉ -->
@@ -263,18 +267,18 @@
 					<div>
 						<h2 class="text-xl md:text-2xl lg:text-3xl font-extrabold mb-4">SIGA</h2>
 						<div class="flex space-x-4">
-							<a target="_blank" href="https://www.instagram.com/boardgamebh/"
-								aria-label="Instagram"
+							<a target="_blank" href="https://www.instagram.com/boardgamebh/" aria-label="Instagram"
 								class="bg-pink-600 hover:bg-pink-700 text-white p-3 rounded-full transition-colors duration-300">
 								<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-									<path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+									<path
+										d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
 								</svg>
 							</a>
-							<a target="_blank" href="https://www.facebook.com/boardgamebh/"
-								aria-label="Facebook"
+							<a target="_blank" href="https://www.facebook.com/boardgamebh/" aria-label="Facebook"
 								class="bg-blue-600 hover:bg-blue-700 text-white p-3 rounded-full transition-colors duration-300">
 								<svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-									<path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+									<path
+										d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
 								</svg>
 							</a>
 						</div>
@@ -287,33 +291,33 @@
 				</div>
 			</div>
 		</footer>
-		</div>
+	</div>
 
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity=""
-			crossorigin="anonymous"></script>
-		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-		<script>
-			AOS.init();
-		</script>
-		<script type="module" src="/public/js/scripts.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity=""
+		crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script>
+		AOS.init();
+	</script>
+	<script type="module" src="/public/js/scripts.js"></script>
 
-		<!-- Firebase -->
-		<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script>
-		<script>
-			var firebaseConfig = {
-				apiKey: "AIzaSyDSkax_bQZESW9EJf3lsWcScjVG3W1RglI",
-				authDomain: "site-bgbh.firebaseapp.com",
-				projectId: "site-bgbh",
-				storageBucket: "site-bgbh.appspot.com",
-				messagingSenderId: "55901407241",
-				appId: "1:55901407241:web:31b7dfb0296a5e8b6b50d8",
-				measurementId: "G-SZ4NX75M8X",
-			};
-			firebase.initializeApp(firebaseConfig);
-			firebase.analytics();
-		</script>
+	<!-- Firebase -->
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script>
+	<script>
+		var firebaseConfig = {
+			apiKey: "AIzaSyDSkax_bQZESW9EJf3lsWcScjVG3W1RglI",
+			authDomain: "site-bgbh.firebaseapp.com",
+			projectId: "site-bgbh",
+			storageBucket: "site-bgbh.appspot.com",
+			messagingSenderId: "55901407241",
+			appId: "1:55901407241:web:31b7dfb0296a5e8b6b50d8",
+			measurementId: "G-SZ4NX75M8X",
+		};
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script>
 </body>
 
 </html>
