ajustar frase data entrega

--- a/mathtrade-bh/edicao-setembro-2025.html
+++ b/mathtrade-bh/edicao-setembro-2025.html
@@ -164,7 +164,7 @@
                     <li>
                         Fique atento ao cronograma de entrega dos jogos que estabelece que nesta edição os jogos devem
                         ser
-                        <strong>entregues até as 17h de sábado, dia 27 de Setembro de 2025</strong>
+                        <strong>entregues até as 17h de sábado, dia 04 de Outubro de 2025</strong>
                         (esta data varia em cada edição)
                     </li>
                 </ul>
