--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
             <i class="bi bi-arrow-repeat mr-1"></i> MATH TRADE BH
           </div>
           <div class="p-4">
-            <a href="/mathtrade-bh/edicao-setembro-2025.html"
-              class="block hover:scale-[1.02] transition-transform">
+            <a href="/mathtrade-bh/edicao-setembro-2025.html" class="block hover:scale-[1.02] transition-transform">
               <img src="/src/img/mathtrade/615x330-MT10.png" alt="Math Trade BH - 10ª Edição"
                 class="w-full rounded-md mb-3">
             </a>
@@ -125,7 +124,8 @@
           <div class="p-4">
             <ul class="space-y-3">
               <li>
-                <a href="/em-breve.html" class="flex items-center gap-3 text-gray-700 hover:text-green-700 transition-colors">
+                <a href="/em-breve.html"
+                  class="flex items-center gap-3 text-gray-700 hover:text-green-700 transition-colors">
                   <i class="bi bi-dice-6 text-lg text-green-700"></i>
                   <div>
                     <span class="font-semibold text-sm block">Joga no QG!</span>
@@ -134,7 +134,8 @@
                 </a>
               </li>
               <li>
-                <a href="/em-breve.html" class="flex items-center gap-3 text-gray-700 hover:text-green-700 transition-colors">
+                <a href="/em-breve.html"
+                  class="flex items-center gap-3 text-gray-700 hover:text-green-700 transition-colors">
                   <i class="bi bi-mic text-lg text-green-700"></i>
                   <div>
                     <span class="font-semibold text-sm block">Resenha com Jogatina</span>
@@ -143,7 +144,8 @@
                 </a>
               </li>
               <li>
-                <a href="/bgbh-masters/" class="flex items-center gap-3 text-gray-700 hover:text-green-700 transition-colors">
+                <a href="/bgbh-masters/"
+                  class="flex items-center gap-3 text-gray-700 hover:text-green-700 transition-colors">
                   <i class="bi bi-trophy text-lg text-green-700"></i>
                   <div>
                     <span class="font-semibold text-sm block">BGBH Masters</span>
@@ -173,31 +175,31 @@
           <div class="p-4">
             <ul class="space-y-2">
               <li>
-                <a href="https://chat.whatsapp.com/placeholder-info" target="_blank"
+                <a href="https://chat.whatsapp.com/J19b6Rw3GzPGqZgsZ9tEgx" target="_blank"
                   class="flex items-center gap-2 text-sm text-gray-700 hover:text-green-700 transition-colors">
                   <i class="bi bi-chat-dots text-green-600"></i>
-                  Math Trade — Info (sem chat)
+                  BGBH - Sala de embarque (O ponto de partida)
                 </a>
               </li>
               <li>
-                <a href="https://chat.whatsapp.com/placeholder-chat" target="_blank"
+                <a href="https://chat.whatsapp.com/Kbza3fTR9OWD87IIDWggUM" target="_blank"
                   class="flex items-center gap-2 text-sm text-gray-700 hover:text-green-700 transition-colors">
                   <i class="bi bi-chat-dots text-green-600"></i>
-                  Math Trade — Com Chat
+                  BGBH - Resenha BG (Bate-papo)
                 </a>
               </li>
               <li>
-                <a href="https://chat.whatsapp.com/placeholder-novatos" target="_blank"
+                <a href="https://chat.whatsapp.com/BF5NaqoCDfDFG3lvFBC6FV" target="_blank"
                   class="flex items-center gap-2 text-sm text-gray-700 hover:text-green-700 transition-colors">
                   <i class="bi bi-chat-dots text-green-600"></i>
-                  Math Trade — Novatos
+                  BGBH - Trocas e Vendas (Chat Restrito)
                 </a>
               </li>
               <li>
-                <a href="https://chat.whatsapp.com/placeholder-geral" target="_blank"
+                <a href="https://chat.whatsapp.com/Kc4NyoLXfczA2cQMz1Gwq3" target="_blank"
                   class="flex items-center gap-2 text-sm text-gray-700 hover:text-green-700 transition-colors">
-                  <i class="bi bi-people text-green-600"></i>
-                  BoardgameBH — Geral
+                  <i class="bi bi-chat-dots text-green-600"></i>
+                  BGBH — Partidas online (Para os que curtem jogatina virtual)
                 </a>
               </li>
             </ul>
@@ -218,8 +220,7 @@
               </a>
               <a href="https://www.instagram.com/ludocafebh/" target="_blank"
                 class="hover:opacity-80 transition-opacity">
-                <img src="/src/img/parceiros/1_Ludocafe_colorida_positiva.png" alt="LudoCafé"
-                  class="w-full h-auto">
+                <img src="/src/img/parceiros/1_Ludocafe_colorida_positiva.png" alt="LudoCafé" class="w-full h-auto">
               </a>
             </div>
             <div class="mt-4 text-center">
@@ -254,7 +255,7 @@
   <!-- CTA Banner -->
   <section class="bg-gradient-to-r from-green-700 to-emerald-600 text-white py-10 px-4 text-center">
     <div class="max-w-2xl mx-auto">
-      <h2 class="text-2xl md:text-3xl font-extrabold mb-3">Faça parte do BoardgameBH!</h2>
+      <h2 class="text-2xl md:text-3xl font-bold mb-3">Faça parte do BoardgameBH!</h2>
       <p class="text-lg mb-5 opacity-90">Entre em contato e seja um apoiador ou parceiro do nosso projeto.</p>
       <a href="/em-breve.html"
         class="inline-block bg-white text-green-700 font-bold px-6 py-3 rounded-lg hover:bg-gray-100 transition-colors">
